improved layout for requesting burst

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -702,6 +702,7 @@
   "purchased_products": "Productes adquirits",
   "put_for_sale": "Posar a la venda",
   "qr_code": "QR Code",
+  "qr_code_data": "Dades del codi QR",
   "qty": "Qtat",
   "quantity": "Quantity",
   "raw_transaction_details": "Detalls de la transacció sense processar",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Heu venut o transferit 1 Actiu de __name__ .",
   "you_sold_assets_plural": "Vostè ha venuts o transferits Actius de __count__ __name__ .",
-  "your_address": "Your Address",
+  "your_address": "La teva direcció",
   "your_alias_sale_offer": "Has posat aquest Àlies a la venta.",
   "your_name": "El vostre nom",
   "your_passphrase": "La vostre Contrasenya",
