--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -702,6 +702,7 @@
   "purchased_products": "Gekaufte Artikel",
   "put_for_sale": "Anbieten",
   "qr_code": "QR Code",
+  "qr_code_data": "QR-Code-Daten",
   "qty": "Menge",
   "quantity": "Menge",
   "raw_transaction_details": "Alle Details zur Transaktion",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Du hast <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a> verkauft oder übertragen.",
   "you_sold_assets_plural": "Du hast <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a> verkauft oder übertragen.",
-  "your_address": "Your Address",
+  "your_address": "Deine Adresse",
   "your_alias_sale_offer": "Sie bieten diesen Alias zum Kauf an.",
   "your_name": "Ihr Name",
   "your_passphrase": "Ihre Passphrase",
