--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -711,6 +711,7 @@
   "purchased_products": "Purchased Products",
   "put_for_sale": "Put For Sale",
   "qr_code": "QR Code",
+  "qr_code_data": "QR Code Data",
   "qty": "QTY",
   "quantity": "Quantity",
   "raw_transaction_details": "Raw Transaction Details",
