--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -702,6 +702,7 @@
   "purchased_products": "Productos Adquiridos",
   "put_for_sale": "Poner a la Venta",
   "qr_code": "QR Code",
+  "qr_code_data": "Datos del Código QR",
   "qty": "Cant.",
   "quantity": "Cantidad",
   "raw_transaction_details": "Datos sin procesar de la Transacción",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Usted vendió o transfirió <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Su dirección",
   "your_alias_sale_offer": "Ha puesto este alias a la venta.",
   "your_name": "Su Nombre",
   "your_passphrase": "Su Contraseña",
