--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -702,6 +702,7 @@
   "purchased_products": "Productos adquiridos",
   "put_for_sale": "Pór á venda",
   "qr_code": "QR Code",
+  "qr_code_data": "Datos de código QR",
   "qty": "Cant.",
   "quantity": "Cantidade",
   "raw_transaction_details": "Datos sen procesar da transacción",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "O seu enderezo",
   "your_alias_sale_offer": "Esta poñendo a venta este alias.",
   "your_name": "O seu nome",
   "your_passphrase": "O seu contrasinal",
