--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -702,6 +702,7 @@
   "purchased_products": "Produk-produk yang dibeli",
   "put_for_sale": "Menempatkan Dijual",
   "qr_code": "QR Code",
+  "qr_code_data": "Data Kode QR",
   "qty": "QTY",
   "quantity": "Kuantitas",
   "raw_transaction_details": "Rincian transaksi mentah",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Alamat Anda",
   "your_alias_sale_offer": "Anda menawarkan alias ini untuk dijual.",
   "your_name": "Namamu",
   "your_passphrase": "Kata sandi",
