--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -702,6 +702,7 @@
   "purchased_products": "購入商品",
   "put_for_sale": "販売にする",
   "qr_code": "QR Code",
+  "qr_code_data": "QRコードデータ",
   "qty": "数量",
   "quantity": "数量",
   "raw_transaction_details": "未処理トランザクションの詳細",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "あなたの住所",
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
   "your_passphrase": "あなたのパスフレーズ",
