--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -702,6 +702,7 @@
   "purchased_products": "Nupirkti produktai",
   "put_for_sale": "Pateikti pardavimui",
   "qr_code": "QR Code",
+  "qr_code_data": "QR kodo duomenys",
   "qty": "KIEKIS",
   "quantity": "Kiekis",
   "raw_transaction_details": "Transakcijos išsami informacija",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Jūs pardavėte ar persiuntėte <a href='#' data-goto-asset='__asset__'> 1 __name__ aktyvą</a>.",
   "you_sold_assets_plural": "Jūs pardavėte ar persiuntėte <a href='#' data-goto-asset='__asset__'> __count__ __name__ aktyvus</a>.",
-  "your_address": "Your Address",
+  "your_address": "Jūsų adresas",
   "your_alias_sale_offer": "Jūs siūlote ši pseudonimą pardavimui.",
   "your_name": "Jūsų vardas",
   "your_passphrase": "Jūsų slaptažodis",
