--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -702,6 +702,7 @@
   "purchased_products": "Gekochte Producten",
   "put_for_sale": "Neergezet voor Verkoop",
   "qr_code": "QR Code",
+  "qr_code_data": "QR-codegegevens",
   "qty": "Aantal",
   "quantity": "Hoeveelheid",
   "raw_transaction_details": "Ruwe transactiedetails",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Je hebt <a href='#' data-goto-asset='__asset__'> 1 __name__ asset</a> verkocht of overgedragen.",
   "you_sold_assets_plural": "Je hebt <a href='#' data-goto-asset='__asset__'> __count__ __name__ assets</a> verkocht of overgedragen.",
-  "your_address": "Your Address",
+  "your_address": "Jouw adres",
   "your_alias_sale_offer": "U biedt deze alias te koop aan.",
   "your_name": "Uw naam",
   "your_passphrase": "Uw wachtwoord/passphrase",
