--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -702,6 +702,7 @@
   "purchased_products": "Produse achiziționate",
   "put_for_sale": "Pune de vânzare",
   "qr_code": "QR Code",
+  "qr_code_data": "QR Code Data",
   "qty": "CANTIT",
   "quantity": "Quantity",
   "raw_transaction_details": "Detalii tranzacție neprocesată",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Ai vândut sau transferat 1 __name__ activă.",
   "you_sold_assets_plural": "Ai vândut sau transferat __count__ __name__ active.",
-  "your_address": "Your Address",
+  "your_address": "Adresa ta",
   "your_alias_sale_offer": "Ai pus acest alias la vânzare.",
   "your_name": "Numele tău",
   "your_passphrase": "Parola ta",
