--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -702,6 +702,7 @@
   "purchased_products": "Закупени продукти",
   "put_for_sale": "За продажба",
   "qr_code": "QR Code",
+  "qr_code_data": "Данни за QR код",
   "qty": "К-во",
   "quantity": "Quantity",
   "raw_transaction_details": "Данни за необработена сделка",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Вие продадохте, прехвърлихте или изтрихте един __name__ актив.",
   "you_sold_assets_plural": "Вие продадохте, прехвърлихте или изтрихте __count__ __name__ активи.",
-  "your_address": "Your Address",
+  "your_address": "Вашият адрес",
   "your_alias_sale_offer": "Вие предлагате този псевдоним за продажба.",
   "your_name": "Вашето име",
   "your_passphrase": "Вашата парола",
