--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -702,6 +702,7 @@
   "purchased_products": "Zakoupené produkty",
   "put_for_sale": "Vystavit k prodeji",
   "qr_code": "QR Code",
+  "qr_code_data": "Data kódu QR",
   "qty": "Množ.",
   "quantity": "Quantity",
   "raw_transaction_details": "Raw Transaction Details",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Vaše adresa",
   "your_alias_sale_offer": "Nabízíte tento alias na prodej.",
   "your_name": "Vaše jméno",
   "your_passphrase": "Vaše heslo",
