--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -702,6 +702,7 @@
   "purchased_products": "Αγορασμένα αγαθά",
   "put_for_sale": "Τοποθέτηση προς πώληση",
   "qr_code": "QR Code",
+  "qr_code_data": "QR Code Data",
   "qty": "Ποσότητα",
   "quantity": "Quantity",
   "raw_transaction_details": "Raw Transaction Details",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Η διεύθυνση σου",
   "your_alias_sale_offer": "Προσφέρετε προς πώληση αυτό το ψευδώνυμο.",
   "your_name": "Το όνομά σου",
   "your_passphrase": "Η φράση πρόσβασης σας",
