--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -702,6 +702,7 @@
   "purchased_products": "Ostetut tuotteet",
   "put_for_sale": "Aseta myyntiin",
   "qr_code": "QR Code",
+  "qr_code_data": "QR-kooditiedot",
   "qty": "Määrä",
   "quantity": "Määrä",
   "raw_transaction_details": "Transaktion tiedot",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Osoitteesi",
   "your_alias_sale_offer": "Tarjoat tätä aliasta myytäväksi.",
   "your_name": "Nimesi",
   "your_passphrase": "Tunnuslauseesi",
