--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -702,6 +702,7 @@
   "purchased_products": "Produits achetés",
   "put_for_sale": "Mettre en vente",
   "qr_code": "QR Code",
+  "qr_code_data": "Données du code QR",
   "qty": "Qté",
   "quantity": "Quantité",
   "raw_transaction_details": "Détails de la transaction brute",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Vous avez vendu ou transféré <a href='#' data-goto-asset='__asset__'>1 actif __name__</a>.",
   "you_sold_assets_plural": "Vous avez vendu ou transféré <a href='#' data-goto-asset='__asset__'>__count__ actifs __name__</a>.",
-  "your_address": "Your Address",
+  "your_address": "Votre adresse",
   "your_alias_sale_offer": "Vous avez mis cet alias en vente.",
   "your_name": "Votre nom",
   "your_passphrase": "Votre phrase de passe",
