--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -702,6 +702,7 @@
   "purchased_products": "खरीदे हुए उत्पाद",
   "put_for_sale": "बिक्री के लिए रखा",
   "qr_code": "QR Code",
+  "qr_code_data": "QR कोड डेटा",
   "qty": "मात्रा",
   "quantity": "Quantity",
   "raw_transaction_details": "कच्चे हस्तांतरण विवरण",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "आपका पता",
   "your_alias_sale_offer": "You are offering this alias for sale.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
