--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -702,6 +702,7 @@
   "purchased_products": "Prodotti acquistati",
   "put_for_sale": "Metti in vendita",
   "qr_code": "QR Code",
+  "qr_code_data": "Dati del codice QR",
   "qty": "Q. TÀ",
   "quantity": "Quantità",
   "raw_transaction_details": "Dettagli sulla transazione non processata",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Il tuo indirizzo",
   "your_alias_sale_offer": "Stai per mettere in vendita questo alias.",
   "your_name": "Il tuo nome",
   "your_passphrase": "La tua Passphrase",
