--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -711,6 +711,7 @@
   "purchased_products": "Kupione produkty",
   "put_for_sale": "Wystaw na sprzedaż",
   "qr_code": "QR Code",
+  "qr_code_data": "Dane kodu QR",
   "qty": "Ilość",
   "quantity": "Ilość",
   "raw_transaction_details": "Nieobrobione dane transakcji",
@@ -959,7 +960,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Sprzedałeś lub wytransferowałeś <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "Sprzedałeś lub wytransferowałeś <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Twój adres",
   "your_alias_sale_offer": "Ten alias został przez Ciebie wystawiony na sprzedaż.",
   "your_name": "Twoje imię",
   "your_passphrase": "Twoje hasło",
