--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -702,6 +702,7 @@
   "purchased_products": "Produtos adquiridos",
   "put_for_sale": "Colocar para venda",
   "qr_code": "QR Code",
+  "qr_code_data": "Dados de Código QR",
   "qty": "Qtd",
   "quantity": "Quantity",
   "raw_transaction_details": "Detalhes da transação não processada",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Você vendeu, transferiu ou excluíu 1 __name__ ativos.",
   "you_sold_assets_plural": "Você vendeu, transferiu ou excluíu __count__ ativos __name__.",
-  "your_address": "Your Address",
+  "your_address": "Seu endereço",
   "your_alias_sale_offer": "Você está oferecendo este pseudônimo para venda.",
   "your_name": "Seu nome",
   "your_passphrase": "Sua senha",
