--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -702,6 +702,7 @@
   "purchased_products": "Produtos Adquiridos",
   "put_for_sale": "Colocar para Venda",
   "qr_code": "QR Code",
+  "qr_code_data": "Dados de Código QR",
   "qty": "Qtd",
   "quantity": "Quantidade",
   "raw_transaction_details": "Dados sem processar da Transação",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Você vendeu ou transferiu <a href='#' data-goto-asset='__asset__'> 1 __name__ ativos</a>.",
   "you_sold_assets_plural": "Você vendeu ou transferiu <a href='#' data-goto-asset='__asset__'> __count__ __name__ ativos</a>.",
-  "your_address": "Your Address",
+  "your_address": "Seu endereço",
   "your_alias_sale_offer": "Você está oferecendo este alias para venda.",
   "your_name": "O Seu Nome",
   "your_passphrase": "A sua senha",
