--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -702,6 +702,7 @@
   "purchased_products": "Купленные Товары",
   "put_for_sale": "Выставлен на продажу",
   "qr_code": "QR Code",
+  "qr_code_data": "Данные QR-кода",
   "qty": "Кол-во",
   "quantity": "Количество",
   "raw_transaction_details": "Детали необработанной транзакции",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Вы продали или передали  <a href='#' data-goto-asset='__asset__'> 1 __name__  активов</a>.",
   "you_sold_assets_plural": "Вы продали или передали <a href='#' data-goto-asset='__asset__'>__count__ __name__ активов</a>.",
-  "your_address": "Your Address",
+  "your_address": "Ваш адрес",
   "your_alias_sale_offer": "Вы предлагаете этот псевдоним для продажи.",
   "your_name": "Ваше имя",
   "your_passphrase": "Ваш пароль",
