--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -702,6 +702,7 @@
   "purchased_products": "Kupljeni proizvodi",
   "put_for_sale": "Stavi na prodaju",
   "qr_code": "QR Code",
+  "qr_code_data": "Podaci o QR kodu",
   "qty": "QTY",
   "quantity": "Quantity",
   "raw_transaction_details": "Detalji transakcije",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Vaša adresa",
   "your_alias_sale_offer": "Ponudili ste ovaj pseudonim na prodaju.",
   "your_name": "Vaše ime",
   "your_passphrase": "Vaša lozinka",
