--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -702,6 +702,7 @@
   "purchased_products": "Zakúpené produkty",
   "put_for_sale": "Na predaj",
   "qr_code": "QR Code",
+  "qr_code_data": "Údaje kódu QR",
   "qty": "Množ.",
   "quantity": "Množstvo",
   "raw_transaction_details": "Surové detaily transakcie",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Predali ste alebo previedli majetok <a href='#' data-goto-asset='__asset__'>1 __name__</a>.",
   "you_sold_assets_plural": "Predali ste alebo previedli majetok <a href='#' data-goto-asset='__asset__'>__count__ __name__</a>.",
-  "your_address": "Your Address",
+  "your_address": "Vaša adresa",
   "your_alias_sale_offer": "Ponúkate tento alias na predaj.",
   "your_name": "Vaše Meno",
   "your_passphrase": "Vaše heslo",
