--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -702,6 +702,7 @@
   "purchased_products": "Купљени Производи",
   "put_for_sale": "Ставите на Продају",
   "qr_code": "QR Code",
+  "qr_code_data": "Подаци о КР коду",
   "qty": "QTY",
   "quantity": "Износ",
   "raw_transaction_details": "Детаљи Трансакције",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Продали сте или трансферовали <a href='#' data-goto-asset='__asset__'>1 __name__ ассет-а</a>.",
   "you_sold_assets_plural": "Продали сте или трансферовали <a href='#' data-goto-asset='__asset__'>__count__ __name__ассет-а</a>.",
-  "your_address": "Your Address",
+  "your_address": "Ваша адреса",
   "your_alias_sale_offer": "Ви нудите овај алиас на продају.",
   "your_name": "Ваше Име",
   "your_passphrase": "Ваша Лозинка",
