--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -702,6 +702,7 @@
   "purchased_products": "Satın alınan ürünler",
   "put_for_sale": "Satışa sür",
   "qr_code": "QR Code",
+  "qr_code_data": "QR Kod Verileri",
   "qty": "MİKTAR",
   "quantity": "Quantity",
   "raw_transaction_details": "Ham işlem ayrıntıları",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "You sold or transferred <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_sold_assets_plural": "You sold or transferred <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
-  "your_address": "Your Address",
+  "your_address": "Senin adresin",
   "your_alias_sale_offer": "Bu rumuzu satışa sunuyorsunuz.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
