--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -702,6 +702,7 @@
   "purchased_products": "Куплені Товари",
   "put_for_sale": "Виставлений на продаж",
   "qr_code": "QR Code",
+  "qr_code_data": "Дані QR-коду",
   "qty": "Кількість",
   "quantity": "Кількість",
   "raw_transaction_details": "RAW деталі транзакції",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "Ви продали або передали  <a href='#' data-goto-asset='__asset__'>1 __name__  активів</a>.",
   "you_sold_assets_plural": "Ви продали або передали <a href='#' data-goto-asset='__asset__'>__count__ __name__ активів</a>.",
-  "your_address": "Your Address",
+  "your_address": "Вашу адресу",
   "your_alias_sale_offer": "Ви пропонуєте цей псевдонім для продажу.",
   "your_name": "Твоє ім’я",
   "your_passphrase": "Ваша парольна фраза",
