--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -702,6 +702,7 @@
   "purchased_products": "已购买产品",
   "put_for_sale": "出售",
   "qr_code": "QR Code",
+  "qr_code_data": "QR码数据",
   "qty": "数量",
   "quantity": "数量",
   "raw_transaction_details": "原始交易详情",
@@ -949,7 +950,7 @@
   "you_sent_burst": "You sent Burst",
   "you_sold_assets": "您出售或转让 <a href='#' data-goto-asset='__asset__'> 1 __name__ 资产</a>。",
   "you_sold_assets_plural": "您出售或转让 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 资产</a>。",
-  "your_address": "Your Address",
+  "your_address": "你的地址",
   "your_alias_sale_offer": "您的该别名正在出售。",
   "your_name": "您的名称",
   "your_passphrase": "您的密码",
